--- a/windows/msi/wixtoolset/CeRToolkit_InstallDirDlg.wxs
+++ b/windows/msi/wixtoolset/CeRToolkit_InstallDirDlg.wxs
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!-- <copyright file="InstallDirDlg.wxs" company="Outercurve Foundation"> Copyright (c) 2004, Outercurve Foundation. This software is released under Microsoft Reciprocal License (MS-RL). The license and 
-  further copyright text can be found in the file LICENSE.TXT at the root directory of the distribution. </copyright> -->
+<!-- Adjusted version of InstallDirDlg.wxs from wixtoolset source code -->
 <Wix xmlns="http://schemas.microsoft.com/wix/2006/wi">
   <Fragment>
     <UI>
