--- a/windows/msi/wixtoolset/CeRToolkit_WixUI_InstallDir.wxs
+++ b/windows/msi/wixtoolset/CeRToolkit_WixUI_InstallDir.wxs
@@ -1,10 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!-- <copyright file="WixUI_InstallDir.wxs" company="Outercurve Foundation"> Copyright (c) 2004, Outercurve Foundation. This software is released under Microsoft Reciprocal License (MS-RL). The license 
-  and further copyright text can be found in the file LICENSE.TXT at the root directory of the distribution. </copyright> -->
-
-<!-- First-time install dialog sequence: - WixUI_WelcomeDlg - WixUI_LicenseAgreementDlg - WixUI_InstallDirDlg - WixUI_VerifyReadyDlg - WixUI_DiskCostDlg Maintenance dialog sequence: - WixUI_MaintenanceWelcomeDlg 
-  - WixUI_MaintenanceTypeDlg - WixUI_InstallDirDlg - WixUI_VerifyReadyDlg Patch dialog sequence: - WixUI_WelcomeDlg - WixUI_VerifyReadyDlg -->
-
+<!-- Adjusted version of WixUI_InstallDir.wxs from wixtoolset source code -->
 <Wix xmlns="http://schemas.microsoft.com/wix/2006/wi">
   <Fragment>
     <UI Id="CeRToolkit_WixUI_InstallDir">
